Moved docker from lupify-gui up a level

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -17,14 +17,14 @@ services:
             - '8080:8080'
             - '8443:8443'
         volumes:
-            - ./lupify:/lupify
+            - ./lupify-gui:/lupify
         networks:
           - flask-openldap
 
     openldap:
         build:
             context: .
-            dockerfile: dockerfiles/openldap.dockerfile
+            dockerfile: docker/dockerfiles/openldap.dockerfile
         environment:
             - LDAP_TLS_VERIFY_CLIENT=try
         ports:
@@ -53,7 +53,7 @@ services:
     mongo-seed:
         build:
             context: .
-            dockerfile: dockerfiles/mongo-seed.dockerfile
+            dockerfile: docker/dockerfiles/mongo-seed.dockerfile
         environment:
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: example
