--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     flask:
         build:
             context: .
-            dockerfile: dockerfiles/flask.dockerfile
+            dockerfile: docker/dockerfiles/flask.dockerfile
         #volumes:
           #- ./lupify:/app
           #- .:/app
