Logging, basic startup

--- a/lupify-scanner/config.ini
+++ b/lupify-scanner/config.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
-mongodb_uri: 127.0.0.1
-mongodb_port: 4444
-mongodb_user: user
-mongodb_pass: password
+mongodb_uri: localhost
+mongodb_port: 27017
+mongodb_user: lupify_user
+mongodb_pass: P@ssw0rd
+config_level: debug
