Removed config.ini

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -21,6 +21,10 @@ services:
         networks:
           - flask-openldap
 
+    lupify-scanner:
+        volumes:
+            - ./lupify-scanner:/lupify-scanner
+
     openldap:
         build:
             context: .
@@ -36,6 +40,8 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: example
+        ports:
+            - 27017:27017
 
     mongo-express:
         image: mongo-express
